--- a/Code/SPI/CMakeLists.txt
+++ b/Code/SPI/CMakeLists.txt
@@ -28,36 +28,35 @@ set(PICO_BOARD pico CACHE STRING "Board type")
 # Pull in Raspberry Pi Pico SDK (must be before project)
 include(pico_sdk_import.cmake)
 
-project(Scientific_research_work C CXX ASM)
+project(SPI C CXX ASM)
 
 # Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(Scientific_research_work Scientific_research_work.c )
+add_executable(SPI SPI.c )
 
-pico_set_program_name(Scientific_research_work "Scientific_research_work")
-pico_set_program_version(Scientific_research_work "0.1")
+pico_set_program_name(SPI "SPI")
+pico_set_program_version(SPI "0.1")
 
 # Modify the below lines to enable/disable output over UART/USB
-pico_enable_stdio_uart(Scientific_research_work 0)
-pico_enable_stdio_usb(Scientific_research_work 1)
+pico_enable_stdio_uart(SPI 0)
+pico_enable_stdio_usb(SPI 1)
 
 # Add the standard library to the build
-target_link_libraries(Scientific_research_work
+target_link_libraries(SPI
         pico_stdlib)
 
 # Add the standard include files to the build
-target_include_directories(Scientific_research_work PRIVATE
+target_include_directories(SPI PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}
 )
 
 # Add any user requested libraries
-target_link_libraries(Scientific_research_work 
+target_link_libraries(SPI 
         hardware_spi
-        hardware_i2c
         )
 
-pico_add_extra_outputs(Scientific_research_work)
+pico_add_extra_outputs(SPI)
 
