--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
         "cstdint": "c",
         "cstddef": "c"
     },
-    "cmake.sourceDirectory": "/home/danil/VS Cod/Scientific-research-work/Scientific_research_work"
+    "cmake.sourceDirectory": "/home/danil/Scientific-research-work/Scientific_research_work"
 }
